Fixed an href error and fixed episode titles+added release dates for s3

--- a/Amphibia/index.html
+++ b/Amphibia/index.html
@@ -132,7 +132,7 @@
 		<p><strong>19. Children of the Spore/Anne of The Year</strong> (22min)</p>
 	</div>
 	
-	<a href="Amphibia/S1E20.html">
+	<a href="S1E20.html">
 	<div class="s1">
 		<img class="thumbnail" src="../assets/thumbnails/amphibia/S1E20.png">
 		<p><strong>20. Reunion </strong>(22min)</p>
