--- a/The_Owl_House/index.html
+++ b/The_Owl_House/index.html
@@ -266,15 +266,15 @@
 	<div class="s3 comingsoon">
 		<img class="thumbnail" src="../assets/thumbnails/toh/S3E2.png">
 		<div class="overlay">
-		<div class="text"><p>Coming 2023</p></div></div>
-		<p><strong>2. Watching and Dreaming</strong><br> (45min)</p>
-	</div>
-	
-	<a>
-	<div class="s3 comingsoon">
-		<img class="thumbnail" src="../assets/thumbnails/toh/S3E3.png">
-		<div class="overlay">
-		<div class="text"><p>Coming 2023</p></div></div>
-		<p><strong>3. For the Future</strong> (45min)</p>
+		<div class="text"><p>Coming January 21st 2023</p></div></div>
+		<p><strong>2. For the Future</strong><br> (45min)</p>
+		</div>
+		
+		<a>
+		<div class="s3 comingsoon">
+			<img class="thumbnail" src="../assets/thumbnails/toh/S3E3.png">
+			<div class="overlay">
+			<div class="text"><p>Coming April 8th 2023</p></div></div>
+			<p><strong>3. Watching and Dreaming</strong> (45min)</p>
 	</div>
 </div>	
