--- a/The_Owl_House/S3E1.html
+++ b/The_Owl_House/S3E1.html
@@ -10,6 +10,6 @@
 	<button class="episodeNav"><< Previous Episode</button>
 	<a href="index.html">
 	<button class="episodeNav">< Episode List</button></a>
-    <!--<a href="S3E2.html">
-    <button class="episodeNav">Next Episode >></button>-->
+    <a href="S3E2.html">
+    <button class="episodeNav">Next Episode >></button>
 	
