--- a/The_Owl_House/S3E2.html
+++ b/The_Owl_House/S3E2.html
@@ -3,13 +3,13 @@
 	<link rel="icon" href="../assets/logos-icons/toh_icon.ico">
 	<link rel="stylesheet" href="../assets/css/toh.css"><center>
 	<img src="../assets/logos-icons/toh_logo.png" width="191" height="180">
-	<h2>Season 3 Episode 2: Watching and Dreaming</h2>
-	<iframe src="" allow="fullscreen"></iframe><br><br>
+	<h2>Season 3 Episode 2: For the Future</h2>
+	<iframe src="https://mega.nz/embed/1zpUQbjY#meXIwQ2nzfz4Y-xTbzSwKUY56MKQ68UoFCvCLwOAS1g" allow="fullscreen"></iframe><br><br>
 
 	<a href="S3E1.html">
 	<button class="episodeNav"><< Previous Episode</button>
 	<a href="index.html">
 	<button class="episodeNav">< Episode List</button></a>
-    <a href="S3E3.html">
+    <!--<a href="S3E3.html">
 	<button class="episodeNav">Next Episode >></button>
 	
