--- a/The_Owl_House/S3E3.html
+++ b/The_Owl_House/S3E3.html
@@ -3,7 +3,7 @@
 	<link rel="icon" href="../assets/logos-icons/toh_icon.ico">
 	<link rel="stylesheet" href="../assets/css/toh.css"><center>
 	<img src="../assets/logos-icons/toh_logo.png" width="191" height="180">
-	<h2>Season 3 Episode 3: For the Future</h2>
+	<h2>Season 3 Episode 3: Watching and Dreaming</h2>
 	<iframe src="" allow="fullscreen"></iframe><br><br>
 
 	<a href="S3E2.html">
