--- a/The_Owl_House/index.html
+++ b/The_Owl_House/index.html
@@ -257,17 +257,15 @@
 	</div>
 	
 	<a href="S3E1.html">
-	<div class="s3 comingsoon">
+	<div class="s3">
 		<img class="thumbnail" src="../assets/thumbnails/toh/S3E1.png">
 		<p><strong>1. Thanks to Them</strong> (45min)</p>
 	</div>
 	
-	<a>
-	<div class="s3 comingsoon">
+	<a href="S3E2.html">
+	<div class="s3">
 		<img class="thumbnail" src="../assets/thumbnails/toh/S3E2.png">
-		<div class="overlay">
-		<div class="text"><p>Coming January 21st 2023</p></div></div>
-		<p><strong>2. For the Future</strong><br> (45min)</p>
+		<p><strong>2. For the Future</strong> (45min)</p>
 		</div>
 		
 		<a>
@@ -275,6 +273,6 @@
 			<img class="thumbnail" src="../assets/thumbnails/toh/S3E3.png">
 			<div class="overlay">
 			<div class="text"><p>Coming April 8th 2023</p></div></div>
-			<p><strong>3. Watching and Dreaming</strong> (45min)</p>
+			<p><strong>3. Watching and Dreaming</strong><br> (45min)</p>
 	</div>
 </div>	
